--- a/ph.html
+++ b/ph.html
@@ -45,6 +45,12 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro impedit   beatae moLorem ipsum dolor sit amet consectetur, adipisicing elit. Porro   impedit beatae molestiae doloremque quas modi quidem quae corporis nobis   velit! Aut cumque ut a labore ipsa numquam natus eos voluptas.lestiae   doloremque quas modi quidem quae corporis nobis velit! Aut cumque ut a labore   ipsa numquam natus eos voluptas.</p>
   
 </div>
+ <div class="blog">
+    <h3>My sajek tour during winter</h3>
+   <i> <small>Author: Traveller emni</small></i>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro impedit   beatae moLorem ipsum dolor sit amet consectetur, adipisicing elit. Porro   impedit beatae molestiae doloremque quas modi quidem quae corporis nobis   velit! Aut cumque ut a labore ipsa numquam natus eos voluptas.lestiae   doloremque quas modi quidem quae corporis nobis velit! Aut cumque ut a labore   ipsa numquam natus eos voluptas.</p>
+  
+</div>
  
 
 
